--- a/src/app/scorecard-cardsgame/scorecard-cardsgame.component.html
+++ b/src/app/scorecard-cardsgame/scorecard-cardsgame.component.html
@@ -5,72 +5,93 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 </nav>
-<div class="bg">
+<!-- <div class="bg">
     <div class="container">
         <div class="container-fluid">
+        </div>
+    </div>
+</div> -->
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="carousel-caption">
+          <h2> TBD</h2>
+        </div>
+          <img src="../../assets/images/cliffs.JPG" class="d-block w-100" alt="../../assets/images/cliffs.JPG">
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-caption">
+            <h2> TBD</h2>
+          </div>
+        <img src="../../assets/images/cliffs(1).jpg" class="d-block w-100" alt="../../assets/images/cliffs(1).jpg">
+      </div>
+    </div>
+  </div>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <div class="container-fluid">
+                <div class="form-group row">
+                    <div class="col-md-3">
+                        <label class="control-label" for="players">Number of Players</label>
+                        <input [(ngModel)]="numberOfPlayers" (ngModelChange)="triggerModel()" class="form-control"
+                            id="players" type="text" placeholder="No. of Players">
+                    </div>
+                    <div class="col-md-3">
+                        <label class="control-label" for="readOnlyInput">Amount per person</label>
+                        <input [(ngModel)]="amountPerPerson" class="form-control" id="amount" type="text"
+                            placeholder="$$">
+                    </div>
+                    <div class="col-md-3">
+                        <label class="control-label" for="readOnlyInput">Total Points</label>
+                        <input [(ngModel)]="totalPoints" class="form-control" id="amount" type="text" placeholder="100">
+                    </div>
+                    <div class="col-md-3">
+                        <label class="control-label" for="readOnlyInput">Total bidding amount</label>
+                        <input class="form-control" readonly id="biddingAmt" type="text" placeholder="$$"
+                            [(ngModel)]="numberOfPlayers*amountPerPerson">
+                    </div>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr *ngIf="refresh && tableHeaders.length > 0">
+                        <td>Names</td>
+                        <th *ngFor="let x of tableHeaders; let i=index">
+                            <ng-container>
+                                <input class="form-control" type="text" placeholder="Player Name{{i}}"
+                                    [ngModel]="tableHeaders[i]" (ngModelChange)="updateHeaders($event, i)"
+                                    [ngModelOptions]="{updateOn: 'blur', debounce: 500 }">
+                            </ng-container>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let y of tableData; let i=index">
+                        <td>{{i+1}}</td>
+                        <td *ngFor="let x of y; let z=index">
+                            <ng-container>
+                                <input class="form-control" id="playerNames{{z}}" type="text" placeholder="Score{{i+1}}"
+                                    [(ngModel)]="tableData[i][z]['score']" [ngModelOptions]="{updateOn: 'blur'}"
+                                    (ngModelChange)="totalScores(i, z)">
+                            </ng-container>
+                        </td>
+                    </tr>
+                    <button *ngIf="tableHeaders.length > 0" (click)="addMoreRows()" type="button"
+                        class="btn btn-primary">Add</button>
+                </tbody>
+                <tfoot>
+                    <tr *ngIf="totals.length > 0">
+                        <td>Totals</td>
+                        <td *ngFor="let y of totals">{{y}}</td>
+                    </tr>
+                    <tr *ngIf="settleAmounts.length > 0">
+                        <td>Settling Amount</td>
+                        <td *ngFor="let y of settleAmounts">{{y}}</td>
+                    </tr>
+                </tfoot>
+            </table>
+
         </div>
     </div>
 </div>
-    <div class="container">
-        <div class="container-fluid">
-            <div class="form-group row">
-                <div class="col-md-3">
-                    <label class="control-label" for="players">Number of Players</label>
-                    <input [(ngModel)]="numberOfPlayers" (ngModelChange)="triggerModel()" class="form-control"
-                        id="players" type="text" placeholder="No. of Players">
-                </div>
-                <div class="col-md-3">
-                    <label class="control-label" for="readOnlyInput">Amount per person</label>
-                    <input [(ngModel)]="amountPerPerson" class="form-control" id="amount" type="text" placeholder="$$">
-                </div>
-                <div class="col-md-3">
-                    <label class="control-label" for="readOnlyInput">Total Points</label>
-                    <input [(ngModel)]="totalPoints" class="form-control" id="amount" type="text" placeholder="100">
-                </div>
-                <div class="col-md-3">
-                    <label class="control-label" for="readOnlyInput">Total bidding amount</label>
-                    <input class="form-control" readonly id="biddingAmt" type="text" placeholder="$$"
-                        [(ngModel)]="numberOfPlayers*amountPerPerson">
-                </div>
-            </div>
-        </div>
-        <table class="table">
-            <thead>
-                <tr *ngIf="refresh && tableHeaders.length > 0">
-                    <td>Names</td>
-                    <th *ngFor="let x of tableHeaders; let i=index">
-                        <ng-container>
-                            <input class="form-control" type="text" placeholder="Player Name{{i}}"
-                                [ngModel]="tableHeaders[i]" (ngModelChange)="updateHeaders($event, i)"
-                                [ngModelOptions]="{updateOn: 'blur', debounce: 500 }">
-                        </ng-container>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let y of tableData; let i=index">
-                    <td>{{i+1}}</td>
-                    <td *ngFor="let x of y; let z=index">
-                        <ng-container>
-                            <input class="form-control" id="playerNames{{z}}" type="text" placeholder="Score{{i+1}}"
-                                [(ngModel)]="tableData[i][z]['score']" [ngModelOptions]="{updateOn: 'blur'}"
-                                (ngModelChange)="totalScores()">
-                        </ng-container>
-                    </td>
-                </tr>
-                <button *ngIf="tableHeaders.length > 0" (click)="addMoreRows()" type="button"
-                    class="btn btn-primary">Add</button>
-            </tbody>
-            <tfoot>
-                <tr *ngIf="totals.length > 0">
-                    <td>Totals</td>
-                    <td *ngFor="let y of totals">{{y}}</td>
-                </tr>
-                <tr *ngIf="settleAmounts.length > 0">
-                    <td>Settling Amount</td>
-                    <td *ngFor="let y of settleAmounts">{{y}}</td>
-                </tr>
-            </tfoot>
-        </table>
-
-    </div>
